# EnergyScheduling

./: .gitignore  Dockerfile.dev  mosquitto.conf  start.sh
.devcontainer/: devcontainer.json
Data/UseCases/Use Case IEEE-14 bus/: case14.mat
Data/UseCases/Use Case IEEE-30 bus/: case_ieee30.mat
Data/UseCases/Use Case IEEE-5 bus/: case5.mat  case5_ess.mat  loadprofile_industrial1_3.2.2016_max.csv
Data/UseCases/Use Case Microgrid/: casemicrogrid_ess.mat
NetworkDataGenerator/: .gitignore  .gitlab-ci.yml  README.md
NetworkDataGenerator/Resources/Data/: case118.mat  case14.mat  case14_aux.mat  case300.mat  case39.mat  case57.mat  case5_aux.mat  case5_ess.mat  case5_marketprice.mat  case5_pv.mat  casemicrogrid.mat  casemicrogrid_aux.mat  casemicrogrid_ess.mat  casemicrogrid_marketprice.mat  casemicrogrid_pv.mat  caseopf.mat  solvedcase.mat
NetworkDataGenerator/Resources/Data_Case300_Test1/: case300_GenCosts1_MinGen.mat  case300_aux.mat
NetworkDataGenerator/Resources/Data_Case300_Test2/: case300_GenCosts2_MinGen.mat  case300_ess.mat  case300_pv.mat  pvforecast_01082017.csv
NetworkDataGenerator/Resources/Data_Case300_Test5/: case300_ess.mat  loadprofile_96.csv
NetworkDataGenerator/Resources/Data_Case300_Test6/: case300_GenCosts3_MinGen.mat  case300_aux.mat  case300_pv.mat  loadforecast_30032014.csv
NetworkDataGenerator/Resources/Data_Case30_Test1/: case30_aux_v1.mat  case30_pv.mat  case_ieee30_v1.mat  marketprice_19072022.mat
NetworkDataGenerator/Resources/Data_Case30_Test2/: case30_aux.mat  case30_ess.mat  case_ieee30_v2.mat
NetworkDataGenerator/Resources/Data_Case5_Test1/: case5_MinGen.mat
NetworkDataGenerator/Resources/Data_Case5_Test2/: case5_aux.mat
NetworkDataGenerator/Resources/Data_Case5_Test3/: case5_pv.mat
NetworkDataGenerator/Resources/Data_Case5_Test6/: case5_aux.mat  case5_aux_res.mat  case5_ess.mat  case5_pv.mat  case5_v1.mat
NetworkDataGenerator/Resources/Data_Case5_TestPresentation/: case5.mat
NetworkDataGenerator/Resources/LoadProfiles/: casemicrogrid_loadprofile.csv  identity_loadprofile.csv
NetworkDataGenerator/Resources/PhotovoltaicProfiles/: casemicrogrid_pvprofile.csv  pvprofile_industrial1_6.2.2016_max_v2.csv
NetworkDataGenerator/Resources/Scripts/: callOpf.m
NetworkDataGenerator/doc/: MatpowerFormat.md
NetworkDataGenerator/src/: NetworkDataGenerator.sln
NetworkDataGenerator/src/NetworkDataGenerator.App/: NetworkDataGenerator.App.csproj  PowerGridProblem.cs  Program.cs
NetworkDataGenerator/src/NetworkDataGenerator.Tests/: NetworkDataGenerator.Tests.csproj
Prototype/: README.md
Prototype/consumers/: Dockerfile  analyse.ipynb  config.json  consumption_model.py  create_model.py  main.py  main_dat.py  pyproject.toml  test.py
Prototype/consumers/configurations/ex0_one_consumer/: config.json
Prototype/consumers/configurations/ex1_three_consumer/: config.json
Prototype/consumers/consumption_models/: ex1_london2011-2014_cluster0
Prototype/consumers/domain_models/: Consumer.py  ConsumerModel.py
Prototype/consumers/models/: EnumTypes.py
Prototype/coordinator/: Dockerfile  README.md  app.py  app_basic.py  app_scenarios.py  config.json  coordinator.py  coordinator_dat.py  csv_data_creator.py  demo.ipynb  demo_scenarios.ipynb  pyproject.toml  scenario_loader.py  scenario_loader_dat.py
Prototype/coordinator/scenarios/ex2_ten_consumer/: config.json
Prototype/docker/: docker-compose-spa-energy.yml
Prototype/docker/mqtt/: docker-compose.yml
Prototype/generator/: GeneratorNode.py  analyse.ipynb  config.json  create_model.py  generator_model.py  main.py  main_dat.py  pvmodel_simple.py  pyproject.toml  test.py
Prototype/generator/configurations/ex1_three_consumer/: config.json
Prototype/generator/domain_models/: GeneratorModel.py
Prototype/generator/generator_models/: ex1_pvgis_10kwp_hgb
Prototype/network/: README.md  config.json  main.py  main_dat.py  pyproject.toml  test.py  testnetwork.ipynb  testpp.ipynb
Prototype/network/configurations/ex0_one_consumer/: config.json
Prototype/network/configurations/ex1_three_consumer/: config.json
Prototype/network/domain_models/: GeneratorModel.py  NetworkModel.py  OptimalPowerFlow.py
Prototype/network/models/: NetworkModel.py  PowerConsumptionModel.py  PowerGenerationModel.py
Prototype/pvnode/: configuration_model.py  generator_model.py  main.py  pvgis_cli.py  pvgis_connector.py  pvgis_model_creator.py  pyproject.toml  test.py  validation.py
doc/: Scenario.md  Solution.md
scripts/: bootstrap.sh
src/: README.MD
src/consumer/: .cruft.json  .gitlab-ci.yml  Dockerfile-test  README.MD  mkdocs.yml  pyproject.toml
src/consumer/consumer/: ConsumerNode.py  ConsumerSpaMessage.py  __init__.py  consumption_model.py  create_model.py  main.py
src/consumer/docs/: index.md  reference.md
src/coordinator/: .cruft.json  .gitignore  .gitlab-ci.yml  Dockerfile-base  Dockerfile-test  README.MD  mkdocs.yml  pyproject.toml
src/coordinator/coordinator/: .app_basic.py.un~  .app_scenarios.py.un~  __init__.py  app_basic.py  app_basic.py~  app_scenarios.py  app_scenarios.py~  config.json  configuration_creator.py  coordinator.py  export_opf.py  main.py  scenario_loader.py  (+1 more)
src/docker/: README.md  docker-compose-spa-energy.yml
src/generator/: .cruft.json  .gitlab-ci.yml  Dockerfile-test  README.MD  mkdocs.yml  pyproject.toml
src/network/: .cruft.json  .gitlab-ci.yml  Dockerfile-test  pyproject.toml
src/network_area/: Dockerfile-base  Dockerfile-test  README.MD  mkdocs.yml  pyproject.toml
src/pvnode/: .cruft.json  .gitignore  .gitlab-ci.yml  Dockerfile-base  Dockerfile-test  README.MD  mkdocs.yml  pyproject.toml
src/pvnode/tests/testclient/: pyproject.toml  test.py
(+155 files in other folders)
