[tool.poetry]
name = "consumers"
version = "0.1.0"
description = ""
authors = ["Michael Boegl <michael.boegl@risc-software.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
