[tool.poetry]
name = "consumers"
version = "0.1.0"
description = ""
authors = ["Michael Boegl <michael.boegl@risc-software.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.2.1"
dill = "^0.3.7"
jupyter = "^1.0.0"
pandas = "^2.0.3"
python-multipart = "^0.0.6"
requests = "^2.31.0"
spa-dat = {version = "^0.1.1", source = "risc-pypi"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# https://python-poetry.org/docs/repositories/#using-a-private-repository
[[tool.poetry.source]]
name = "risc-pypi"
url = "https://pypiserver.risc-software.at/simple/"
priority = "explicit"
