[tool.poetry]
name = "coordinator"
version = "0.1.0"
description = ""
authors = ["Michael Boegl <michael.boegl@risc-software.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.0.3"
plotly = "^5.16.1"
requests = "^2.31.0"
dash = "^2.12.1"
dill = "^0.3.7"
seaborn = "^0.12.2"
pydantic = "^2.3.0"
spa-dat = {version = "^0.3.0", source = "risc-pypi"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# https://python-poetry.org/docs/repositories/#using-a-private-repository
[[tool.poetry.source]]
name = "risc-pypi"
url = "https://pypiserver.risc-software.at/simple/"
priority = "explicit"