[tool.poetry]
name = "generator"
version = "0.1.0"
description = ""
authors = ["Michael Boegl <michael.boegl@risc-software.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.2.1"
uvicorn = "^0.23.2"
fastapi = "^0.101.1"
dill = "^0.3.7"
pandas = "^2.0.3"
jupyter = "^1.0.0"
python-multipart = "^0.0.6"
spa-dat = {version = "^0.3.0", source = "risc-pypi"}
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# https://python-poetry.org/docs/repositories/#using-a-private-repository
[[tool.poetry.source]]
name = "risc-pypi"
url = "https://pypiserver.risc-software.at/simple/"
priority = "explicit"