[tool.poetry]
name = "network"
version = "0.1.0"
description = ""
authors = ["Michael Boegl <michael.boegl@risc-software.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
pandapower = "^2.13.1"
requests = "^2.31.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
ipykernel = "^6.25.1"
numpy = "^1.25.2"
importlib = "^1.0.4"
spa-dat = {version = "^0.3.0", source = "risc-pypi"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# https://python-poetry.org/docs/repositories/#using-a-private-repository
[[tool.poetry.source]]
name = "risc-pypi"
url = "https://pypiserver.risc-software.at/simple/"
priority = "explicit"