[tool.poetry]
name = "pvnode"
version = "0.1.0"
description = ""
authors = ["ilangtha <ines.langthallner@risc-software.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
